--- a/client/index.html
+++ b/client/index.html
@@ -10,34 +10,51 @@
     <title>Movie-API</title>
 </head>
 <body>
-    <nav class="navbar">
-        <a href="index.html">
+    <nav class="navbar container--fluid">
+        <a class="navbar_logo" href="index.html">
             <img src="assets/movie-logo.png" alt="logo">
         </a>
         <button class="login_btn">Login</button>
     </nav>
     <div class="searchbar">
-        <input type="text" placeholder="Search for a specific movie">
+        <input type="text" id="searchMoviesInput" placeholder="Search for a specific movie" name="searchField">
+        <div id="searchResults" class="searchResults"></div>
     </div>
-    <div class="search_filters">
-        <div class="search_filter">
+    <div class="row search_filters">
+        <div class="col-lg-4 search_filter">
             <label for="genre" class="filter_label">Genre</label>
             <select class="filter_select" id="genre" name="genre">
                 <option value="all">All Genres</option>
             </select>
         </div>
-        <div class="search_filter">
+        <div class="col-lg-4 search_filter">
             <label for="year" class="filter_label">Year</label>
             <select class="filter_select" id="year" name="year">
-                <option value="all">All Years</option>
+                <option value="all">All Realease Dates</option>
             </select>
         </div>
-        <div class="search_filter">
+        <div class="col-lg-4 search_filter">
             <label for="director" class="filter_label">Film Director</label>
             <select class="filter_select" id="director" name="director">
                 <option value="all">All Film Directors</option>
             </select>
         </div>
     </div>
+    <div class="apply_filters">
+        <button class="filter_btn" id="filterBtn">Apply filters</button>
+    </div>
+    <section class="container">
+        <div class="row movies_cards" id="movies_cards">
+            <div class="col-lg-4 movie_card">
+                <!-- <a href="">
+                    <img src="assets/category-seating.webp" alt="seating">
+                </a>
+                <p class="categories__thumbnail__text">Seating</p> -->
+            </div>
+        </div>
+    </section>
+
+    <script src="script.js"></script>
+
 </body>
 </html>
