--- a/client/index.html
+++ b/client/index.html
@@ -44,7 +44,7 @@
         <button class="filter_btn" id="filterBtn">Apply filters</button>
     </div>
     <section class="container">
-        <div class="row movies_cards" id="movies_cards">
+        <div class="row movies_container" id="movies_container">
             <div class="col-lg-4 movie_card">
                 <!-- <a href="">
                     <img src="assets/category-seating.webp" alt="seating">
