--- a/client/moviepage.html
+++ b/client/moviepage.html
@@ -18,7 +18,7 @@
         </div>
         <div class="col-lg-8 movie_card_info">
             <h2>movie title</h2>
-            <h3>year, fil director</h3>
+            <h3>year, film director</h3>
             <p>genres</p>
         </div>
     </section>
