--- a/client/index.html
+++ b/client/index.html
@@ -62,6 +62,16 @@
     <div class="apply_filters">
         <button class="filter_btn" id="filterBtn">Apply filters</button>
     </div>
+    <div class="pagination">
+        <label for="pages" class="filter_label">Find more movies</label>
+        <select class="filter_select" id="pages" name="pages">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+        </select>
+    </div>
     <section class="container">
         <div class="row movies_container" id="movies_container">
             <!-- <img src="./../static/no-image.jpg" alt=""> -->
