rating and README

--- a/client/moviepage.html
+++ b/client/moviepage.html
@@ -43,6 +43,7 @@
             <h2>movie title</h2>
             <h3>year, film director</h3>
             <h3>genres</h3>
+            <h4>averageRating, totalRatings</h4>
             <div class="admin_crud" id="admin_crud">
                 <button class="btn edit_btn">Edit</button>
                 <button class="btn delete_btn">Delete</button>
@@ -60,7 +61,7 @@
                         <option value="4">4</option>
                         <option value="5">5</option>
                     </select>
-                    <input type="text" placeholder="Give us your review about this movie" name="commentField">
+                    <input type="text" placeholder="Give us your review about this movie" name="commentField" id="commentField">
                 </div>
                 <button class="rate_btn" id="rateBtn" type="submit">Send review</button>
             </form>
